# external-secret-explain

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: k8s.rs  main.rs  utils.rs
src/aws/: cluster_secret_store.rs
src/providers/: aws.rs  common.rs  mod.rs  oracle.rs
src/secrets/: cluster_secret_store.rs  external_secret.rs  mod.rs  secret.rs
