[package]
name = "external-secret-explain"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-types = "1"
base64 = "0"
clap = { version = "4", features = ["derive"] }
dirs = "6"
k8s-openapi = { version = "0", features = ["latest"] }
kube = { version = "0", features = [
    "client",
    "runtime",
    "derive",
    "rustls-tls",
] }
kube-client = "0"
kube-derive = "0"
oci-sdk = { git = "https://github.com/wasilak/oci-rust-sdk.git" }
once_cell = "1"
opentelemetry = { version = "0" }
opentelemetry-appender-tracing = { version = "0" }
opentelemetry-otlp = { version = "0", features = ["http-proto", "tokio"] }
opentelemetry-stdout = "0"
opentelemetry_sdk = { version = "0", features = ["rt-tokio", "logs"] }
reqwest = "0"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0"
tracing-opentelemetry = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }

# 🔹 OpenSSL Fix for Cross-Compilation
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
rustls = "0.23.27"

[dev-dependencies]
async-std = "1"

# 🔹 Ensure MUSL Builds Use Vendored OpenSSL
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
